# temporal-abcore

./: .gitignore  CMakeLists.txt  Makefile  README.md  abcore.cpp  abcore.h  baseline.cpp  baseline.h  bigraph.cpp  bigraph.h  config.h  main.cpp  tabcore.cpp  tabcore.h  tabcore_baseline.cpp  tabcore_baseline.h  utility.h
abcore/: abcore.cpp  abcore.h
adv/: adv.cpp  adv.h
baseline/: baseline.cpp  baseline.h  tabcore_baseline.cpp  tabcore_baseline.h
bigraph/: bigraph.cpp  bigraph.h
config/: config.h
data/: edit.data  edit.g  edit.graph  process_data.py  temp
online/: online.cpp  online.h
utility/: utility.cpp
